# Automatisk-sentimentanalys

./: .coverage  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_CONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  Makefile  PROJECT_STATUS.md  README.md  README_updated.md  RECOMMENDED_NEXT_TASKS.md  REFAKTORERINGSPLAN_BACKEND_API.md  REVIEW_MISTRAL_FAS3.md  ROADMAP.md  SECURITY.md  Sentimentanalys.bat  TESTING_STATUS_BACKEND_API.md  UTVECKLINGSPLAN.md  UTVECKLINGSPLAN_Fas4_Backend_CallCenter_Features_v1.1.md  UTVECKLINGSPLAN_Mistral_LLM.md  YOUTUBE_AUDIO_INTEGRATION_PLAN.md  coding-guidelines.md  docker-compose.nicegui.yml  docker-compose.webui.yml  launcher.ps1  plan.md  pyproject.toml  requirements-api.txt  requirements-asr.txt  requirements-cli.txt  requirements-dashboard-nicegui.txt  requirements-desktop.txt  requirements-dev.txt  requirements-install.txt  requirements-min.txt  (+2 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  windows-installer.yml
.windsurf/rules/: code-guidelines.md
app/: __init__.py  dashboard.py  dashboard_launcher.py  setup_hub.py  transcription_monitor.py
app/archive/: __init__.py
app/components/: __init__.py  atoms.py  call_detail.py  call_detail_view.py  dashboard_widgets.py  molecules.py
app/nicegui_dashboard/: __init__.py  main.py  settings.py  state.py
app/nicegui_poc/: main.py
app/services/: data_services.py  demo_data.py
configs/: alerting_config.yaml  analyzer_eval.yaml  analyzer_profiles.yaml  analyzers.yaml  callcenter_hotwords.txt  finetune.ci.yaml  finetune.yaml  install_defaults.yaml  llm_config.yaml  openrouter.key.example
configs/qa_scorecards/: standard_support_v1.yaml
data/: callcenter_train.csv  callcenter_train.jsonl  callcenter_val.csv  callcenter_val.jsonl  intent_train.jsonl  intent_val.jsonl  sensaldo_lexicon.csv  test_swedish.csv
docs/: AGENTS_OpenClaw.md  ANALYSIS_QUALITY_REPORT_2026-06-28.md  ANALYZER_DEVELOPMENT.md  ANALYZER_STRATEGY.md  API.md  API_FINDINGS.md  API_REVIEW_HARDENING_PLAN.md  ARCHITECTURE.md  CLEANUP_PLAN.md  DEVELOPMENT.md  EDGE_AI.md  FAS2_SUMMARY.md  FAS3_MISTRAL_LLM_INTEGRATION.md  FAS4_COMPLETION.md  GROK_BUILD_PLAN_FAS1-3.md  INTEGRATION_PLAN_YOUTUBE_DOWNLOADER.md  LLM_AGENT_GUIDE.md  LLM_AGENT_GUIDE_OpenClaw.md  LLM_AGENT_QUICKREF.md  LLM_PROVIDERS.md  MIGRATION_TO_NICEGUI_PLAN.md  PHASE1_PLAN.md  PHASE1_SUMMARY.md  PHASE2_PLAN.md  PRODUCTION_CHECKLIST.md  PROJECT_ASSESSMENT_2026-07.md  PROJECT_AUDIT_2026-06-28.md  PROJECT_AUDIT_2026-06-28_FULL_REVIEW.md  PROPOSED_ANALYZERS.md  RELEASE_NOTES_v0.4.md  ROADMAP.md  TRANSCRIPTION_V2_PLAN.md  WEBUI_MODERNIZATION_PLAN.md  WINDOWS_INSTALL.md  YOUTUBE_AUDIO_INTEGRATION_PLAN.md
docs/archive/: 2026-06-23-orientation.md  API_REVIEW_HARDENING_PLAN.md  DASHBOARD_EXCELLENCE_PLAN.md  GROK_BUILD_PLAN_FAS1-3.md  PLAN_BRIEF.md  README.md  RECOMMENDED_NEXT_TASKS.md  RECOMMENDED_NEXT_TASKS_root_2026-06-28.md  REFAKTORERINGSPLAN_BACKEND_API.md  ROADMAP_SV.md  SYNERGY_ANALYSIS_Fas5.md  UTVECKLINGSPLAN.md  UTVECKLINGSPLAN_Fas5_FineTuning.md
docs/plans/: 2026-06-23-orientation.md  2026-06-29-001-feat-semantic-deps-production-plan.md
installer/: README.md  build-installer.ps1  build-portable.ps1  post-install.ps1
installer/inno/: sentimentanalys.iss
installer/templates/: user_config.yaml.template
launcher/: __init__.py  api_deps.py  asr_manager.py  cli.py  dashboard_deps.py  env_builder.py  event_log.py  main.py  pid_store.py  process_manager.py  process_util.py  scroll_frame.py  settings_service.py  status_snapshot.py  ui_asr_dialog.py  ui_settings_dialog.py  ui_status_panel.py
memory/: MEMORY.md  cost-telemetry.jsonl  grok-pending.json
memory/grok-plans/: 2026-06-23-groq-integration-plan.md  2026-06-28-grok-build-self-improve-PROMPT.md
notebooks/: finetune_callcenter.ipynb
reports/: analyzer_baseline.json  api_openapi_baseline.json  baseline_results.json  domain_baseline.json  evaluate_fas4_validation.json  evaluate_fas4_validation.md  fas2_comparison.json  fas2_comparison.md  finetune_baseline.json  intent_backend_comparison.json  intent_baseline.json  orientation_fas4_validation.md  orientation_scenarios.json
samples/: examples.txt  lexicon_sample.csv  youtube_test_urls.txt
samples/audio/: manifest.yaml
scripts/: _bootstrap.py  benchmark_analyzers.py  benchmark_intent.py  compare_intent_backends.py  dev-setup.ps1  eval_sentiment_gate.py  evaluate_real_corpus.py  generate_testset.py  ingest_youtube_data.py  prepare_callcenter_data.py  prepare_intent_data.py  train_intent.py  validate_domain_corpus.py  validate_intent_corpus.py
skills/grok-build/: SKILL.md
src/: agent_performance.py  alerting.py  alerting_state.py  api.py  asr.py  asr_cli.py  asr_cli_refactored.py  blending.py  caching.py  clean.py  cli.py  compliance_qa.py  diarization.py  evaluate.py  finetune.py  insights.py  insights_aggregator.py  intent.py  lexicon.py  main.py  negation.py  pipeline.py  pipeline_steps.py  predictive.py  profiles.py  semantic_search.py  sentiment.py  summarizer.py  topic_modeling.py
src/analysis/: __init__.py  aspect.py  (+32 more)
tests/: conftest.py  test_advanced.py  test_agent_performance.py  test_alerting.py  test_alerting_router.py  test_analysis_registry.py  test_analyzer_benchmarks.py  test_analyzer_quality.py  test_api.py  test_api_alerting_router.py  test_api_coverage.py  test_api_security.py  test_api_services.py  test_api_smoke.py  test_asr.py  test_asr_assets.py  test_audio_benchmarks.py  test_audio_catalog.py  test_blending.py  test_caching.py  test_callcenter_golden.py  test_clean.py  test_cli.py  test_compliance_qa.py  test_core_device.py  test_dashboard.py  test_dashboard_viz.py  test_data_ingestion.py  test_diarization.py  test_edge_inference.py  test_evaluate.py  test_event_log.py  test_fas4_dashboard_data.py  test_fas4_e2e.py  test_fas4_edge_cases.py  test_fas4_evaluate.py  test_finetune.py  test_groq_client.py  test_heuristic_analyzers.py  test_insights_aggregator.py  (+42 more)
webui/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts
(+256 files in other folders)
