[project]
name = "automatisk-sentimentanalys"
version = "0.4.0"
description = "Svenskt sentimentanalys- och Call Center Intelligence-system med ASR, diarization och LLM-stöd (Mistral/OpenRouter)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ideal-invest" },
]
keywords = ["sentiment-analysis", "swedish", "nlp", "asr", "whisper", "call-center", "diarization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
sentimentanalys = "src.cli:app"
sentimentanalys-launcher = "launcher.cli:main"
sentimentanalys-dashboard = "app.dashboard_launcher:main"

[project.optional-dependencies]
min = ["transformers>=4.44.0", "torch>=2.2.0,<3.0", "sentencepiece>=0.1.99", "protobuf>=3.20.0"]
cli = ["pandas>=2.2.0", "typer>=0.12.3", "rich>=13.7.0", "faster-whisper>=1.0.0"]
api = [
    "transformers>=4.44.0",
    "torch>=2.2.0,<3.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "faster-whisper>=1.0.0",
    "python-multipart>=0.0.9",
]
dev = ["pytest>=8.0", "pytest-cov>=6.0", "ruff>=0.11", "black>=25.0", "mypy>=1.16"]
diarize = [
    "pyannote.audio>=3.1.0",
    "torchaudio>=2.2.0",
]
dashboard-nicegui = [
    "nicegui>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
]
# whisperx and noisereduce är valfria för avancerade ASR-backends (se kommentarer i requirements-cli.txt)

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", ".venv", "__pycache__", "*.ipynb_checkpoints*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (not always clearer)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"app/setup_hub.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["faster_whisper", "transformers.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "module_under_test(module): NiceGUI test entry module (see nicegui.testing.plugin)",
    "slow: tests that load ML models or run ASR",
    "audio: tests that require samples/audio files",
]

[tool.coverage.run]
source = ["src"]
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
]
fail_under = 65

# API hardening gate (run explicitly):
#   pytest tests/test_api.py tests/test_api_coverage.py --cov=src/api --cov-fail-under=90