[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*", "launcher*"]

[project]
name = "automatisk-sentimentanalys"
version = "0.4.1"
description = "Svenskt sentimentanalys- och Call Center Intelligence-system med ASR, diarization och LLM-stöd (Mistral/OpenRouter)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ideal-invest" },
]
keywords = ["sentiment-analysis", "swedish", "nlp", "asr", "whisper", "call-center", "diarization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."sentiment_analyzers"]
# External plugins register here, e.g.:
# my_plugin = "my_package.analyzers:MyAnalyzer"

[project.scripts]
sentimentanalys = "src.cli:app"
sentimentanalys-launcher = "launcher.cli:main"
sentimentanalys-dashboard = "app.dashboard_launcher:main"
sentimentanalys-download-asr = "src.install.asr_assets:main"

# Full pyproject.toml migration – 2026-06-28 audit
[project.optional-dependencies]
min = ["transformers>=4.44.0", "torch>=2.2.0,<3.0", "sentencepiece>=0.1.99", "protobuf>=3.20.0"]
install = ["pyyaml>=6.0.0", "keyring>=25.0.0"]
cli = [
    "pandas>=2.2.0",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "faster-whisper>=1.0.0",
    "whisperx>=3.1.1",
    "huggingface-hub>=0.23.0",
]
asr = [
    "faster-whisper>=1.0.0",
    "whisperx>=3.1.1",
    "huggingface-hub>=0.23.0",
]
api = [
    "transformers>=4.44.0",
    "torch>=2.2.0,<3.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "faster-whisper>=1.0.0",
    "whisperx>=3.1.1",
    "huggingface-hub>=0.23.0",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
]
llm = [
    "openai>=1.30.0",
    "httpx>=0.27.0",
]
training = [
    "peft>=0.11.0",
    "datasets>=2.20.0",
    "accelerate>=0.31.0",
    "scikit-learn>=1.4.0",
    "pyyaml>=6.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=5.0.0",
    "pre-commit>=3.7.0",
    "ruff>=0.11",
    "black>=25.0",
    "mypy>=1.16",
    "jupyter>=1.0.0",
    "ipython>=8.24.0",
    "nicegui>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "plotly>=5.22.0",
]
diarize = [
    "pyannote.audio>=3.1.0",
    "torchaudio>=2.2.0",
]
semantic = [
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.7.4",
    "hdbscan>=0.8.33",
    "numpy>=1.26.0",
]
dashboard-nicegui = [
    "nicegui>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
]
# ASR: faster-whisper + whisperx ingår i [cli]/[api]/[asr]; modeller hämtas via sentimentanalys-download-asr

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", ".venv", "__pycache__", "*.ipynb_checkpoints*"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (not always clearer)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"app/nicegui_dashboard/**/*.py" = ["SIM117"]
"tests/test_asr.py" = ["E402"]
"tests/test_llm_analyzer.py" = ["E402"]
"src/transcription/faster_whisper.py" = ["N818", "N806", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["faster_whisper", "transformers.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "nicegui_main_file(path): NiceGUI main file for user-simulation tests (see nicegui.testing.plugin)",
    "slow: tests that load ML models or run ASR",
    "audio: tests that require samples/audio files",
]

[tool.coverage.run]
source = ["src"]
# Fas 1 gate: optional ASR/diarization/CLI paths excluded from the 85% target (see evaluate_fas4_validation.md).
omit = [
    "src/cli.py",
    "src/diarization.py",
    "src/finetune.py",
    "src/core/audio.py",
    "src/benchmarks/audio_runner.py",
    "src/benchmarks/audio_cli.py",
    "src/transcription/faster_whisper.py",
    "src/transcription/whisperx.py",
    "src/install/secrets_win.py",
    "src/benchmarks/audio_catalog.py",
    "src/transcription/preprocess.py",
    "src/transcription/preprocess_v2.py",
    "src/transcription/vad_callcenter.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
]
fail_under = 65

# API hardening gate (run explicitly):
#   pytest tests/test_api.py tests/test_api_coverage.py --cov=src/api --cov-fail-under=90